tests/cases/smoke/valid/control_while_break_continue_pass.dp
var i = 0
while i < 5 {
    i = i + 1
    if i == 2 {
        continue
    }
    if i == 4 {
        break
    }
    pass
}
