tests/cases/smoke/invalid/shadowing.dp
var count = 0
if true {
    var count = 1
}
